# geo-analyzer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/geo_analyzer/: __init__.py  __main__.py  advisor.py  batch.py  cli.py  comparator.py  config.py  reporter.py  scanner.py  scorer.py  storage.py
src/geo_analyzer/engines/: __init__.py  base.py  chatgpt.py  gemini.py  perplexity.py
tests/: test_advisor.py  test_batch.py  test_comparator.py  test_scorer.py  test_storage.py
